added handlebars for members, login, signin, contact

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,7 +1,8 @@
 <footer class="footer">
   <div class="content has-text-centered">
-    <p>
-      <strong>Quick Travel</strong> by <a href="https://github.com/lindseybowen/Quick_Travel">Lindsey Bowen, Mateo Ferreira, Purna Gurung, Luwenxi Song</a>
-    </p>
+      <p>
+              <strong>Quick Traveler</strong> 
+              All rights reserved 2021 ©<a></a>. <br>
+            </p>
   </div>
 </footer>
