--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -28,10 +28,10 @@
       
             <!-- navbar items | right side -->
             <div class="navbar-end">
-              <a class="navbar-item is-active" href="/"> Home</a>
-              <a class="navbar-item" href="/flights">Flights</a>
-              <a class="navbar-item" href="">About</a>
-              <a class="navbar-item" href="">log in</a>
+              <a class="navbar-item is-active" href=""> Home</a>
+              <a class="navbar-item" href="#">Menu</a>
+              <a class="navbar-item" href="#">About</a>
+              <a class="navbar-item" href="#">Sign in</a>
          
             </div>
       
