--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-    <title>Flights</title>
+    <title>Quick Travel</title>
 </head>
 
 <body>
@@ -13,5 +14,14 @@
   {{{body}}}
   {{>footer}}
 </body>
-
+<script src='./assets/js/index.js'></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/airport-autocomplete-js@latest/dist/index.browser.min.js"></script>
+<script>
+$( function() {
+$( "#depDate" ).datepicker(({ dateFormat: 'yy-mm-dd' }))
+$( "#reDate" ).datepicker(({ dateFormat: 'yy-mm-dd' }))
+} );
+</script>
 </html>
