--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -28,11 +28,9 @@
       
             <!-- navbar items | right side -->
             <div class="navbar-end">
-              <a class="navbar-item is-active" href=""> Home</a>
-              <a class="navbar-item" href="#">Menu</a>
-              <a class="navbar-item" href="#">About</a>
-              <a class="navbar-item" href="#">Sign in</a>
-         
+              <a class="navbar-item is-active" href="">Home</a>
+              <a class="navbar-item" href="/member">Member</a>
+              <a class="navbar-item" href="/login">Log in</a>
             </div>
       
           </div>
