relink js files

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -92,3 +92,15 @@
               <a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
               <a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
             </div>
+            </body>
+<script src='./assets/js/index.js'></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/airport-autocomplete-js@latest/dist/index.browser.min.js"></script>
+<script>
+$( function() {
+$( "#depDate" ).datepicker(({ dateFormat: 'yy-mm-dd' }))
+$( "#reDate" ).datepicker(({ dateFormat: 'yy-mm-dd' }))
+} );
+</script>
+</html>
