--- a/views/member.handlebars
+++ b/views/member.handlebars
@@ -14,3 +14,7 @@
       </div>
     </div>
   </div>
+</body>
+<script src='./assets/js/member.js'></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+</html>
