--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,3 +24,7 @@
       </div>
     </div>
   </div>
+  </body>
+<script src='./assets/js/filghts.js'></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+</html>
