--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -22,3 +22,7 @@
       </div>
     </div>
   </div>
+  </body>
+<script src='./assets/js/signp.js'></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+</html>
