--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
                 <div class="hero-body">
                   <div class="column is-4 ">
                     <p class="title has-text-warning">
-                      Travel starts from here(handlebars).
+                      Travel starts from here.
                     </p>
                     <div class = "is"> 
                       <div class='field'>
@@ -74,7 +74,7 @@
         </div>
         <div class="column">
           <figure class="image is-9by16" style='height:100%'>
-            <img src="./assets/images/pexels-taryn-elliott-5405596.jpg">
+            <img src="./assets/images/index.jpg">
           </figure>
 
         </div>
