--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -28,7 +28,7 @@
       
             <!-- navbar items | right side -->
             <div class="navbar-end">
-              <a class="navbar-item is-active" href="">Home</a>
+              <a class="navbar-item is-active" href="/">Home</a>
               <a class="navbar-item" href="/member">Member</a>
               <a class="navbar-item" href="/login">Log in</a>
             </div>
