Reponse pass to result page, initial rendering code

--- a/views/flights.handlebars
+++ b/views/flights.handlebars
@@ -3,11 +3,13 @@
     <div class="columns">
       <div class="column has-text-centered">
         <h1 class="title" style="color: Grey;">Flights</h1><br>
+        <h1 id = 'alert' class="title" style="color: Grey;"></h1><br>
       </div>
     </div>
+
     <div id="app" class="row columns is-multiline">
       {{!-- {{#each flights}} --}}
-      <div class="column is-4">
+      {{!-- <div class="column is-4">
         <div class="card large">
           <div class="card-image">
             <figure class="image is-16by9"><img src="https://source.unsplash.com/h-ACUrBngrw/1280x720" alt="Image">
@@ -36,7 +38,10 @@
       </div>
     </div>
   </div>
-</div> 
+</div>  --}}
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src='./assets/js/flights.js'></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+
 </html>
